# slack-meishi

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
libs/: person.py  slack_client.py
